--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "less": "^3.9.0",
+    "less-loader": "^4.1.0",
+    "node-less": "^1.0.0",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1"
   },
