--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "axios": "^0.18.0",
+    "element-ui": "^2.7.2",
     "less": "^3.9.0",
     "less-loader": "^4.1.0",
     "node-less": "^1.0.0",
