--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "element-ui": "^2.7.2",
     "less": "^3.9.0",
     "less-loader": "^4.1.0",
+    "markdown": "^0.5.0",
+    "marked": "^0.6.2",
     "node-less": "^1.0.0",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1",
